apps/deploy/templates/ingress.yaml
---
### THIS IS A SAMPLE CONFIGURATION FILE. PLEASE EDIT IT ACCORDING TO YOUR NEEDS ###
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-movies-ingress
  annotations:
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig":
      { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-central-1:AWS_ACCOUNT:certificate/ID
    alb.ingress.kubernetes.io/group.name: go-app
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: instance
    external-dns.alpha.kubernetes.io/hostname: goapp-poc.com
    kubernetes.io/ingress.class: alb
    meta.helm.sh/release-name: go-app
    meta.helm.sh/release-namespace: go-app
spec:
  rules:
  - host: goapp-poc.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: go-movies-service
            port:
              number: 8080
